Change client structure

--- a/Altruist/client/index.html
+++ b/Altruist/client/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="style/index.css">
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	</head>
 	<body>
 		<section class="msger">
@@ -19,6 +20,7 @@
 			</form>
 		</section>
 
-		<script src='index.js'></script>
+		<script src='js/request.js'></script>
+		<script src='js/index.js'></script>
 	</body>
 </html>
