--- a/Altruist/client/index.html
+++ b/Altruist/client/index.html
@@ -3,7 +3,7 @@
 		<link rel="stylesheet" href="style/index.css">
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
-		<script src="https://cdn.plot.ly/plotly-2.4.2.min.js"></script>
+		<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 	</head>
 	<body>
 		<section class="msger">
